force-app/main/default/objects/Payment_Method__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default payment method for the related contact</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>