force-app/main/default/objects/Payment_Method__c/fields/Merchant_Token__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Token__c</fullName>
    <label>Merchant Token</label>
    <length>55</length>
    <type>Text</type>
</CustomField>