force-app/main/default/objects/Payment_Method__c/fields/MX_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>MX_Customer_Id__c</fullName>
    <formula>Contact__r.MX_Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MX Customer Id</label>
    <type>Text</type>
</CustomField>