force-app/main/default/objects/Payment_Method__c/fields/Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processor__c</fullName>
    <label>Payment Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MX Merchant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>